Microservice/2_learn-docker-basic/c_kubernetes/infra/k8s/event-bus-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: event-bus/blog
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 5099
      targetPort: 5099
