Microservice/2_learn-docker-basic/c_kubernetes/infra/k8s/moderation-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: moderation/blog
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 5054
      targetPort: 5054
