Microservice/2_learn-docker-basic/c_kubernetes/infra/k8s/posts-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: posts/blog
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: post-srv
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 5050
      targetPort: 5050
