Microservice/2_learn-docker-basic/c_kubernetes/infra/k8s/query-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: query/blog
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 5053
      targetPort: 5053
